styles, show data insurance dinamic

--- a/src/components/Spinner.css
+++ b/src/components/Spinner.css
@@ -5,10 +5,12 @@
   text-align: center;
   font-size: 10px;
   transition-duration: 3s;
+  display: flex;
+  justify-content: space-between;
 }
 
 .spinner > div {
-  background-color: #333;
+  background-color: #26c6da;
   height: 100%;
   width: 6px;
   display: inline-block;
