--- a/public/style.css
+++ b/public/style.css
@@ -16,25 +16,21 @@ ul {
   padding: 0;
   margin: 0;
 }
-span.result {
-  position: relative;
-  width: 100%;
-}
 .result-enter {
-  transition: 0.5s;
+  transition: 1s;
 }
-.result-enter.result-enter-active {
+.result-enter .result-enter-active {
   transform: translateY(0%);
 }
 .result-exit {
-  transform: translateY(0);
-  transition: 0.5s;
-  position: absolute;
+  transform: translateY(-60%);
+  transition: 1s;
+  position: relative;
   left: 0;
-  bottom: 0;
+  bottom: 80px;
   right: 0;
 }
 .result-exit-active {
   opacity: 0;
-  transform: translateY(-10%);
+  transform: translateY(-45%);
 }
