--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,7 @@ body {
   ); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #904e95, #e96443);
   font-family: Arial, Helvetica, sans-serif;
+  border-radius: 20%;
 }
 ul {
   list-style: none;
